<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>golfcart_vehicle_interface</name>
  <version>0.0.0</version>
  <description>Vehicle interface stub for Golf Cart (awaiting Turing Drive DBW)</description>
  <maintainer email="a0979580915@gmail.com">habby</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>autoware_control_msgs</depend>
  <depend>autoware_vehicle_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
